--- a/goons.html
+++ b/goons.html
@@ -18,7 +18,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>foo</title>
-        <script type="text/javascript" src="js/jquery-1.4.2.js"></script>
+        <script type="text/javascript" src="jquery/jquery-1.4.2.js"></script>
         <script type="text/javascript">//<![CDATA[
             var dt = 30
 
