index.html: css tweak oblig.js: reworking of progressive rendering

--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
         <style type="text/css">
             #wrapper { width: 720px ; margin: 0 auto ; }
 
+            canvas {
+                border: 1px solid #aaa
+            }
+
+            h1 {
+                color: #aaa
+            }
+
             li {
                 display: inline;
                 list-style-type: none;
