--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         <script type="text/javascript" src="gl1.js"></script>
         <script type="text/javascript" src="goons.js"></script>
         <script type="text/javascript" src="oblig.js"></script>
+        <script type="text/javascript" src="attractor.js"></script>
         <script type="text/javascript">
             $(main)        
         </script>
