--- a/index.html
+++ b/index.html
@@ -132,8 +132,10 @@
         </script>
         <script type="text/javascript" src="gl1.js"></script>
         <script type="text/javascript" src="goons.js"></script>
+        <script type="text/javascript" src="shapes.js"></script>
         <script type="text/javascript" src="oblig.js"></script>
         <script type="text/javascript" src="attractor.js"></script>
+        <script type="text/javascript" src="dots.js"></script>
         <script type="text/javascript">
             $(main)        
         </script>
