made shapes.js use a faster/less naive circle drawing algo; added truchet.js and sprout.js; added random utility functions random.js

--- a/index.html
+++ b/index.html
@@ -130,9 +130,12 @@
                 runToy(n)
             }
         </script>
+        <script type="text/javascript" src="Random.js"></script>
         <script type="text/javascript" src="gl1.js"></script>
         <script type="text/javascript" src="goons.js"></script>
         <script type="text/javascript" src="shapes.js"></script>
+        <script type="text/javascript" src="truchet.js"></script>
+        <script type="text/javascript" src="sprout.js"></script>
         <script type="text/javascript" src="oblig.js"></script>
         <script type="text/javascript" src="attractor.js"></script>
         <script type="text/javascript" src="dots.js"></script>
