added physics1; fixed bug in sprout that meant the pruning pass nuked the whole list

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         <script type="text/javascript" src="shapes.js"></script>
         <script type="text/javascript" src="truchet.js"></script>
         <script type="text/javascript" src="sprout.js"></script>
+        <script type="text/javascript" src="physics1.js"></script>
         <script type="text/javascript" src="oblig.js"></script>
         <script type="text/javascript" src="attractor.js"></script>
         <script type="text/javascript" src="dots.js"></script>
