some new things

--- a/index.html
+++ b/index.html
@@ -162,9 +162,13 @@
         <script type="text/javascript" src="truchet.js"></script>
         <script type="text/javascript" src="sprout.js"></script>
         <script type="text/javascript" src="physics1.js"></script>
+        <script type="text/javascript" src="physics2.js"></script>
         <script type="text/javascript" src="oblig.js"></script>
         <script type="text/javascript" src="attractor.js"></script>
         <script type="text/javascript" src="dots.js"></script>
+        <script type="text/javascript" src="grapher.js"></script>
+        
+       
         <script type="text/javascript">
             $(main)        
         </script>
@@ -191,13 +195,14 @@
             <div id="header">
                 <h1>jstoys</h1>
             </div>
-            <div id="canvas-wrapper">
-                <canvas width="720px" height="720px"></canvas>
-            </div>
-            <div id="stuffs">
-
-                select a toy: <ul id="toylist"></ul>
-                <a href="https://github.com/adgcfad/jstoys">view the source</a>.
+            <div id="content">
+                <div id="stuffs">
+                    select a toy: <ul id="toylist"></ul>
+                    <a href="https://github.com/adgcfad/jstoys">view the source</a>.
+                </div>
+                <div id="canvas-wrapper">
+                    <canvas width="720px" height="720px"></canvas>
+                </div>
             </div>
 
         </div>
