--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
         <script type="text/javascript" src="attractor.js"></script>
         <script type="text/javascript" src="dots.js"></script>
         <script type="text/javascript" src="grapher.js"></script>
+        <script type="text/javascript" src="apollo.js"></script>
         
        
         <script type="text/javascript">
